Fixes and related work

--- a/lean.bib
+++ b/lean.bib
@@ -80,3 +80,89 @@ abstract="We present a new implementation of a reflexive tactic which solves equ
 	address = {New York, NY, USA}
 }
 
+@inproceedings{coq-lattices,
+author = {James, Daniel and Hinze, Ralf},
+year = {2009},
+month = {06},
+day = {2-4},
+numpages = {11},
+title = {A reflection-based proof tactic for lattices in Coq},
+booktitle = {Post-conference proceedings of the 10th Symposium on Trends in Functional Programming},
+location = {Komarno, Slovakia},
+publisher={Intellect},
+series={TFP 2009},
+}
+
+@inproceedings{coq-assoc-comm,
+ author = {Braibant, Thomas and Pous, Damien},
+ title = {Tactics for Reasoning modulo AC in Coq},
+ year = {2011},
+ isbn = {9783642253782},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg},
+ doi = {10.1007/978-3-642-25379-9_14},
+ booktitle = {Proceedings of the First International Conference on Certified Programs and Proofs},
+ pages = {167–182},
+ numpages = {16},
+ location = {Kenting, Taiwan},
+ series = {CPP’11}
+}
+
+@inproceedings{coq-ring-reflection,
+ author = {Boutin, Samuel},
+ title = {Using Reflection to Build Efficient and Certified Decision Procedures},
+ year = {1997},
+ isbn = {354063388X},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg},
+ booktitle = {Proceedings of the Third International Symposium on Theoretical Aspects of Computer Software},
+ pages = {515–529},
+ numpages = {15},
+ series = {TACS ’97}
+}
+
+@InProceedings{resolution-rcf,
+author="Akbarpour, Behzad
+and Paulson, Lawrence C.",
+editor="Dershowitz, Nachum
+and Voronkov, Andrei",
+title="Extending a Resolution Prover for Inequalities on Elementary Functions",
+booktitle="Logic for Programming, Artificial Intelligence, and Reasoning",
+year="2007",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="47--61",
+abstract="Experiments show that many inequalities involving exponentials and logarithms can be proved automatically by combining a resolution theorem prover with a decision procedure for the theory of real closed fields (RCF). The method should be applicable to any functions for which polynomial upper and lower bounds are known. Most bounds only hold for specific argument ranges, but resolution can automatically perform the necessary case analyses. The system consists of a superposition prover (Metis) combined with John Harrison's RCF solver and a small amount of code to simplify literals with respect to the RCF theory.",
+isbn="978-3-540-75560-9"
+}
+
+@InProceedings{hol_light,
+author="Harrison, John",
+editor="Srivas, Mandayam
+and Camilleri, Albert",
+title="HOL Light: A tutorial introduction",
+booktitle="Formal Methods in Computer-Aided Design",
+year="1996",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="265--269",
+abstract="HOL Light is a new version of the HOL theorem prover. While retaining the reliability and programmability of earlier versions, it is more elegant, lightweight, powerful and automatic; it will be the basis for the Cambridge component of the HOL-2000 initiative to develop the next generation of HOL theorem provers. HOL Light is written in CAML Light, and so will run well even on small machines, e.g. PCs and Macintoshes with a few megabytes of RAM. This is in stark contrast to the resource-hungry systems which are the norm in this field, other versions of HOL included. Among the new features of this version axe a powerful simplifier, effective first order automation, simple higher-order matching and very general support for inductive and recursive definitions.",
+isbn="978-3-540-49567-3"
+}
+
+@book{isabelle_hol,
+editor="Nipkow, Tobias
+and Wenzel, Markus
+and Paulson, Lawrence C.",
+title="1. The Basics",
+bookTitle="Isabelle/HOL: A Proof Assistant for Higher-Order Logic",
+year="2002",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+abstract="This book is a tutorial on how to use the theorem prover Isabelle/HOL as a specification and verification system. Isabelle is a generic system for implementing logical formalisms, and Isabelle/HOL is the specialization of Isabelle for HOL,which abbreviates Higher-Order Logic. We introduce HOL step by step following the equation HOL = Functional Programming+ Logic.",
+isbn="978-3-540-45949-1",
+doi="10.1007/3-540-45949-9_1",
+url="https://doi.org/10.1007/3-540-45949-9_1"
+}
+
+
